# dynamic_programming

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  mainpage.dox
envs/: CMakeLists.txt
envs/include/trajectory/: trajectory.hpp
envs/include/utilities/: utilities.hpp
envs/src/: trajectory.cpp
hw7/: CMakeLists.txt  problem_1.cpp  problem_2.cpp
